syntax = "proto3";

package grpc;

option go_package = "github.com/jobzee/multi-agent-protos/grpc";

service AgentService {
  rpc ProcessJobRequest(JobRequest) returns (JobResponse);
  rpc ProcessCandidateRequest(CandidateRequest) returns (CandidateResponse);
}

message JobRequest {
  string request_id = 1;
  string user_id = 2;
  string job_description = 3;
  repeated string skills = 4;
  string location = 5;
  string experience_level = 6;
}

message JobResponse {
  string request_id = 1;
  string status = 2;
  string message = 3;
  repeated JobMatch matches = 4;
}

message JobMatch {
  string job_id = 1;
  string title = 2;
  string company = 3;
  string location = 4;
  double match_score = 5;
  string description = 6;
}

message CandidateRequest {
  string request_id = 1;
  string job_id = 2;
  string job_title = 3;
  string company = 4;
  repeated string required_skills = 5;
  string location = 6;
  string experience_level = 7;
}

message CandidateResponse {
  string request_id = 1;
  string status = 2;
  string message = 3;
  repeated CandidateMatch matches = 4;
}

message CandidateMatch {
  string candidate_id = 1;
  string name = 2;
  string email = 3;
  double match_score = 4;
  repeated string skills = 5;
  string experience = 6;
  string location = 7;
} 